scroll-overflow fix for schedules

--- a/app/assets/stylesheets/pages/_studio_world.scss
+++ b/app/assets/stylesheets/pages/_studio_world.scss
@@ -78,21 +78,7 @@ width: 400px;
 }
 
 .lessons-cards-show {
-  padding-top: 8px;
-  overflow-y: scroll;
-  height: 796px;
-  h2 {
-    display: flex;
-    width: 100%;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-  }
-
-}
-
-.title-lessons-show {
-
+  padding: 8px;
 }
 
 .second-card-show {
